--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue-3": "^0.1.7",
     "vue": "^3.2.25"
   },
   "devDependencies": {
